collapse acq detail block, fix issue with direct parent returning current media

--- a/app/assets/stylesheets/hyrax/showcase.scss
+++ b/app/assets/stylesheets/hyrax/showcase.scss
@@ -1,3 +1,5 @@
+$font-color: #333;
+
 div.showcase {
 
   max-width: 1200px;
@@ -62,6 +64,14 @@ div.showcase {
     }
     @media (min-width: 1200px) {
       font-size: 17px;
+    }
+    a.btn {
+      float:right;
+      color: $font-color;
+      .glyphicon {
+        font-size: 2vw;
+        top: -10px;
+      }
     }
   }
   h3 {
